# rosbag-win

./: .gitattributes  .gitignore  CMakeLists.txt  anthropic-ai-claude-code-win32-x64-2.1.146.tgz  vcpkg.json
rosbag/: CMakeLists.txt
rosbag/cpp_common/: CMakeLists.txt
rosbag/cpp_common/src/: header.cpp
rosbag/ros_msg_parser/: CMakeLists.txt
rosbag/ros_msg_parser/example/: generic_subscriber.cpp  rosbag_example.cpp  simple.cpp
rosbag/ros_msg_parser/include/ros_msg_parser/: builtin_types.hpp
rosbag/ros_msg_parser/include/ros_msg_parser/details/: conversion_impl.hpp
rosbag/ros_msg_parser/include/ros_msg_parser/utils/: shape_shifter.hpp  span.hpp  variant.hpp
rosbag/ros_msg_parser/src/: ros_message.cpp
rosbag/rosbag_storage/: CMakeLists.txt
rosbag/rosbag_storage/include/rosbag/: bag.h  console_bridge_compatibility.h  macros.h  message_instance.h  stream.h
rosbag/rosbag_storage/src/: bag.cpp  bz2_stream.cpp  lz4_stream.cpp
rosbag/roscpp_serialization/: CMakeLists.txt
rosbag/roscpp_serialization/include/ros/: serialization.h
rosbag/roscpp_traits/: CMakeLists.txt
rosbag/roscpp_traits/include/ros/: message_traits.h
rosbag/roslz4/: CMakeLists.txt
rosbag/roslz4/src/: lz4s.c
rosbag/rostime/: CMakeLists.txt
rosbag/test/: CMakeLists.txt  main.cpp
